<resources>
    <string name="app_name">Sber_app1</string>

    <string name="android_password">Введите свой пароль на русском</string>

    <string name="clipboard_title">Пароль</string>

    <string name="toast_copied">Текст скопирован</string>
    <string name="check_caps">Заглавные буквы</string>
    <string name="check_num">Цифры</string>
    <string name="check_sym">Символы</string>
    <string name="btn_generate">Сгенерировать пароль</string>

    <plurals name="symbols_count">
        <item quantity="one">%1$d символ</item>
        <item quantity="two">%1$d символа</item>
        <item quantity="few">%1$d символа</item>
        <item quantity="many">%1$d символов</item>
        <item quantity="other">%1$d символов</item>
    </plurals>

    <string-array name="russian">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
    </string-array>

    <string-array name="latin">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
    </string-array>

    <string-array name="lower">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
    </string-array>

    <string-array name="upper">
        <item>Q</item>
        <item>W</item>
        <item>E</item>
        <item>R</item>
        <item>T</item>
        <item>Y</item>
        <item>U</item>
        <item>I</item>
        <item>O</item>
        <item>P</item>
        <item>A</item>
        <item>S</item>
        <item>D</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>Z</item>
        <item>X</item>
        <item>C</item>
        <item>V</item>
        <item>B</item>
        <item>N</item>
        <item>M</item>
    </string-array>

    <string-array name="digit">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="symbols">
        <item>#</item>
        <item>$</item>
        <item>%</item>
        <item>*</item>
    </string-array>

</resources>
